# ArchieAI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DataManip.py  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  RUST_MODULES_README.md  SECURITY.md  SPEAKER_NOTES.md  api.py  api_demo.py  docker-compose.yml  error.txt  project_README.md  requirements.txt  setup.py  setup.sh  tester.py
data/: scrape_results.json
docs/: DELIVERABLES_SUMMARY.md  presentation_outline.md  project_proposal.md  technical_report.md
notebooks/: archieai_analysis.ipynb
src/: app.py  data_collector.rs  demo(unsued).rs  gem_interface.rs  index.html  lib.rs  main.rs  session_manager.rs
src/data/: analytics.json  users.json
src/data/api/: api_keys.json
src/data/sessions/: 3rmLVhyqp9zskZpXLU4Eq26bz1-BbVi0fKsYU9H4YsI.json  8uS4SWv2sAEVuYh2aEzhY2vjUS6M2t_I7UyJgM559Ro.json  S9kVhcGfG28oDg9s7UckgeO0SemZMtBM4IG32sss0Mg.json
src/helpers/: scraper.py
src/lib/: DataCollector.py  GemInterface.py  SessionManager.py  qrCodeGen.py
src/templates/: chats.html  home.html  index.html
