[package]
name = "archie-ai-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "archie-ai-rust"
path = "src/main.rs"

[lib]
name = "archie_ai_rust"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dotenv = "0.15"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio-stream = "0.1"
axum = { version = "0.8.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures = "0.3"
async-stream = "0.3"
